--- a/src/style/common/base.less
+++ b/src/style/common/base.less
@@ -1,14 +1,2 @@
-* {
-	color: red;
-}
-ul {
-	li {
-		color: purple;
-	}
-}
-.icon {
-	width: 100px;
-	height: 100px;
-	background: url('/src/img/icon.png');
-	background-size: cover;
-}
+@import './reset';
+@import './widget';
