--- a/src/style/common/widget.less
+++ b/src/style/common/widget.less
@@ -1,8 +1,10 @@
 .sidebar {
 	width: 210px;
-	height: 100%;
 	background-color: @dark-blue;
 	float: left;
+	position: absolute;
+	top: 0;
+	bottom: 0;
 	.shadow(0, 0, 10px, @dark-blue-shadow);
 
 	.big_logo {
@@ -75,4 +77,9 @@
 	margin: 10px;
 	border: 1px @gray-cc solid;
 	margin-left: 220px;
+	position: absolute;
+	bottom: 0;
+	top: 45px;
+	right: 0;
+	left: 0;
 }
