--- a/src/style/common/base.less
+++ b/src/style/common/base.less
@@ -7,11 +7,20 @@ html {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	height: 100%;
+	font-size: 14px;
 }
 body {
 	background-color: @body-bg;
 	height: 100%;
-	background-color: #F7F9FC;
+	background-color: @body-bg;
+}
+.wrap {
+    position: relative;
+}
+
+pre {
+    min-height: 25px;
+    line-height: 25px;
 }
 
 // 普通的input
