--- a/src/style/common/reset.less
+++ b/src/style/common/reset.less
@@ -19,9 +19,12 @@ a:focus {
 	outline: thin dotted;
 }
 
+a,
 a:hover,
 a:active {
 	outline: none 0;
+	text-decoration: none;
+	color: @sidebar_text;
 }
 
 article,
