--- a/src/style/common/variable.less
+++ b/src/style/common/variable.less
@@ -1,10 +1,12 @@
 @sprite: url('/src/img/icon.png');
-@dark-blue: #344159;
-@dark-blue-shadow: #2d446f;
+@dark-blue: #344159;   // sidebar 背景色
+@dark-blue-shadow: #2d446f; // sidebar 的投影
 
-@light-blue: #5a9bff;
+@sidebar_text: #b1c7e6; // sidebar 文本颜色
 
-@hover-bg: #f1f1f1;
+@light-blue: #5a9bff;  // header部分划过出现的上边框
+
+@hover-bg: #f1f1f1;   // header部分划过背景色
 
 @gray-33: #333;
 @gray-99: #999;
@@ -12,8 +14,8 @@
 @gray-dd: #ddd;
 @gray-ee: #eee;
 
-@body-bg: #F7F9FC;
-@header-text: #62769b;
+@body-bg: #F7F9FC;  // 页面背景色
+@header-text: #62769b;  // header 文本颜色
 
 .radius(@radius: 5px) {
 	-webkit-border-radius: @radius;
